--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <form action="">
+    <form action="">
         <input type="radio" id="html" name="language" value="HTML">
         <label for="html">HTML</label><br>
 
@@ -28,7 +28,7 @@
 
 
         <input type="submit" name="" id="">
-    </form> -->
+    </form>
 
     <table border="2px" height="150px" width="450px">
         <tr>
