--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form action="./submit.html">
         <input type="radio" id="html" name="language" value="HTML">
         <label for="html">HTML</label><br>
 
